# llm-experiments

./: pyproject.toml
dev/: dev_1_basic_openai_langchain_completions.ipynb  dev_2_langchain_chains.ipynb  dev_3_langchain_agents_tools.ipynb
dev/examples/: chat_with_history.ipynb  try_langchain.ipynb
src/: langchain_chat.py  lib.py
